{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1005,
  "lineage": "0440253c-4e9a-5be2-5817-57b2a6c87fa7",
  "resources": [
    {
      "module": "module.app_vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AppSubnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/AppSubnet-rt",
            "location": "eastus",
            "name": "AppSubnet-rt",
            "resource_group_name": "app-network-es1-rg",
            "route": [
              {
                "address_prefix": "10.46.0.0/22",
                "name": "AppSubnet-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_network_security_group.vnet-nsg",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        },
        {
          "index_key": "DBSubnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/DBSubnet-rt",
            "location": "eastus",
            "name": "DBSubnet-rt",
            "resource_group_name": "app-network-es1-rg",
            "route": [
              {
                "address_prefix": "10.46.0.0/22",
                "name": "DBSubnet-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_network_security_group.vnet-nsg",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        },
        {
          "index_key": "LBsubnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/LBsubnet-rt",
            "location": "eastus",
            "name": "LBsubnet-rt",
            "resource_group_name": "app-network-es1-rg",
            "route": [
              {
                "address_prefix": "10.46.0.0/22",
                "name": "LBsubnet-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_network_security_group.vnet-nsg",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/AppSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/AppSubnet",
            "route_table_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/AppSubnet-rt",
            "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/AppSubnet"
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_route_table.subnet-rt",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        },
        {
          "index_key": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/DBSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/DBSubnet",
            "route_table_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/DBSubnet-rt",
            "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/DBSubnet"
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_route_table.subnet-rt",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        },
        {
          "index_key": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/LBsubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/LBsubnet",
            "route_table_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/routeTables/LBsubnet-rt",
            "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/LBsubnet"
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_route_table.subnet-rt",
            "module.app_vnet.azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.app_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.46.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "46570135-75b4-4dbb-8824-c759c36ecd25",
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet",
            "location": "eastus",
            "name": "app-es1-vnet",
            "resource_group_name": "app-network-es1-rg",
            "subnet": [
              {
                "address_prefix": "10.46.0.0/25",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/AppSubnet",
                "name": "AppSubnet"
              },
              {
                "address_prefix": "10.46.0.128/25",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/LBsubnet",
                "name": "LBsubnet"
              },
              {
                "address_prefix": "10.46.3.0/26",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/DBSubnet",
                "name": "DBSubnet"
              }
            ],
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "PRD",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_network_security_group.vnet-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_rgn1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ApplicationGateway-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/networkSecurityGroups/ApplicationGateway-nsg",
            "location": "eastus",
            "name": "ApplicationGateway-nsg",
            "resource_group_name": "network-es1-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_rgn1",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "ApplicationGateway",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/routeTables/ApplicationGateway-rt",
            "location": "eastus",
            "name": "ApplicationGateway-rt",
            "resource_group_name": "network-es1-rg",
            "route": [
              {
                "address_prefix": "10.41.0.0/22",
                "name": "ApplicationGateway-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hub_vnet_rgn1.azurerm_network_security_group.vnet-nsg",
            "module.hub_vnet_rgn1.azurerm_virtual_network.az_vnet",
            "module.network_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_rgn1",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/ApplicationGateway",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/ApplicationGateway",
            "route_table_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/routeTables/ApplicationGateway-rt",
            "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/ApplicationGateway"
          },
          "dependencies": [
            "module.hub_vnet_rgn1.azurerm_route_table.subnet-rt",
            "module.hub_vnet_rgn1.azurerm_virtual_network.az_vnet",
            "module.network_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_vnet_rgn1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.41.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dcdf2f68-b1a8-4edf-8cef-349d73325572",
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1",
            "location": "eastus",
            "name": "hubvnet-es1-1",
            "resource_group_name": "network-es1-rg",
            "subnet": [
              {
                "address_prefix": "10.41.3.0/26",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/FirewallSubnet",
                "name": "FirewallSubnet"
              },
              {
                "address_prefix": "10.41.3.160/27",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/ApplicationGateway",
                "name": "ApplicationGateway",
                "security_group": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/networkSecurityGroups/ApplicationGateway-nsg"
              },
              {
                "address_prefix": "10.41.3.224/27",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/virtualNetworks/hubvnet-es1-1/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "Connectivity",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.hub_vnet_rgn1.azurerm_network_security_group.vnet-nsg",
            "module.network_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.lb_frontend",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/publicIPAddresses/app-LB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.211.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "app-LB",
            "resource_group_name": "app-network-es1-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "PRD",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "az_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/loadBalancers/app_lb/frontendIPConfigurations/app-LB",
                "name": "app-LB",
                "private_ip_address": "10.46.0.133",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/virtualNetworks/app-es1-vnet/subnets/LBsubnet"
              }
            ],
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/app-network-es1-rg/providers/Microsoft.Network/loadBalancers/app_lb",
            "location": "eastus",
            "name": "app_lb",
            "private_ip_address": "10.46.0.133",
            "private_ip_addresses": [
              "10.46.0.133"
            ],
            "resource_group_name": "app-network-es1-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "PRD",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.app_network_rg.azurerm_resource_group.lawsrg",
            "module.app_vnet.azurerm_network_security_group.vnet-nsg",
            "module.app_vnet.azurerm_virtual_network.az_vnet",
            "module.lb_frontend.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sharedServicesSubnet-nsg",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/networkSecurityGroups/sharedServicesSubnet-nsg",
            "location": "eastus",
            "name": "sharedServicesSubnet-nsg",
            "resource_group_name": "shared-network-es1-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sharedServicesSubnet",
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/routeTables/sharedServicesSubnet-rt",
            "location": "eastus",
            "name": "sharedServicesSubnet-rt",
            "resource_group_name": "shared-network-es1-rg",
            "route": [
              {
                "address_prefix": "10.45.0.0/22",
                "name": "sharedServicesSubnet-rt",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.shared_vnet.azurerm_network_security_group.vnet-nsg",
            "module.shared_vnet.azurerm_virtual_network.az_vnet",
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet",
            "route_table_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/routeTables/sharedServicesSubnet-rt",
            "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet"
          },
          "dependencies": [
            "module.shared_vnet.azurerm_route_table.subnet-rt",
            "module.shared_vnet.azurerm_virtual_network.az_vnet",
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.shared_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.45.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e3489276-9c2c-4451-bd75-f60b57ae94b3",
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1",
            "location": "eastus",
            "name": "sharedvnet-es1",
            "resource_group_name": "shared-network-es1-rg",
            "subnet": [
              {
                "address_prefix": "10.45.0.0/25",
                "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet",
                "name": "sharedServicesSubnet",
                "security_group": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/networkSecurityGroups/sharedServicesSubnet-nsg"
              }
            ],
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "Shared",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.shared_vnet.azurerm_network_security_group.vnet-nsg",
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_pip",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/network-es1-rg/providers/Microsoft.Network/publicIPAddresses/sb0-es1-vpn-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "sb0-es1-vpn-pip",
            "resource_group_name": "network-es1-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Business unit": "N/A",
              "Bussiness Criticality": "High",
              "Cost center": "Exactlyit",
              "Data Classification": "General",
              "Environment": "PRD",
              "Location": "eastus",
              "Operations team": "Cloud Operations"
            }
          },
          "dependencies": [
            "module.network_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.windows_vm[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/aads-es1-rg/providers/Microsoft.Network/networkInterfaces/sb0dces1p00-eth0",
            "internal_domain_name_suffix": "o0jeryzmtriujplv4yfvpluuwd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.45.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D5-0B-A8",
            "name": "sb0dces1p00-eth0",
            "private_ip_address": "10.45.0.5",
            "private_ip_addresses": [
              "10.45.0.5"
            ],
            "resource_group_name": "aads-es1-rg",
            "virtual_machine_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/aads-es1-rg/providers/Microsoft.Compute/virtualMachines/sb0dces1p00"
          },
          "dependencies": [
            "data.azurerm_client_config.current",
            "module.aads_RG.azurerm_resource_group.lawsrg",
            "module.keyvault.azurerm_key_vault.keyvault",
            "module.keyvault.azurerm_key_vault_access_policy.accesspolicy_sp",
            "module.keyvault.azurerm_key_vault_access_policy.accesspolicy_user",
            "module.keyvault_RG.azurerm_resource_group.lawsrg",
            "module.shared_vnet.azurerm_network_security_group.vnet-nsg",
            "module.shared_vnet.azurerm_route_table.subnet-rt",
            "module.shared_vnet.azurerm_subnet_route_table_association.rt_association",
            "module.shared_vnet.azurerm_virtual_network.az_vnet",
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    },
    {
      "module": "module.windows_vm[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/aads-es1-rg/providers/Microsoft.Network/networkInterfaces/sb0dces1p01-eth0",
            "internal_domain_name_suffix": "o0jeryzmtriujplv4yfvpluuwd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.45.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/shared-network-es1-rg/providers/Microsoft.Network/virtualNetworks/sharedvnet-es1/subnets/sharedServicesSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-23-70-1F",
            "name": "sb0dces1p01-eth0",
            "private_ip_address": "10.45.0.4",
            "private_ip_addresses": [
              "10.45.0.4"
            ],
            "resource_group_name": "aads-es1-rg",
            "virtual_machine_id": "/subscriptions/90c683e6-c3fa-4edf-ac00-224e0cb7a33c/resourceGroups/aads-es1-rg/providers/Microsoft.Compute/virtualMachines/sb0dces1p01"
          },
          "dependencies": [
            "data.azurerm_client_config.current",
            "module.aads_RG.azurerm_resource_group.lawsrg",
            "module.keyvault.azurerm_key_vault.keyvault",
            "module.keyvault.azurerm_key_vault_access_policy.accesspolicy_sp",
            "module.keyvault.azurerm_key_vault_access_policy.accesspolicy_user",
            "module.keyvault_RG.azurerm_resource_group.lawsrg",
            "module.shared_vnet.azurerm_network_security_group.vnet-nsg",
            "module.shared_vnet.azurerm_route_table.subnet-rt",
            "module.shared_vnet.azurerm_subnet_route_table_association.rt_association",
            "module.shared_vnet.azurerm_virtual_network.az_vnet",
            "module.sharednetwork_RG.azurerm_resource_group.lawsrg"
          ]
        }
      ]
    }
  ]
}